--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "prefix": "!",
-  "suffix": "!",
-  "masters": ["202515321402294275", "206092093653909504"],
-  "botID": "319545839951544320",
+  "prefix": "H!",
+  "suffix": "",
+  "masters": ["539195184357965833", "437019658374348801"],
+  "botID": "627370793369600011",
   "codeElements": [";", "{", "}", ")", "[", "]", ">"],
   "repostThreshold": 4,
-  "codeLang": "csharp",
+  "codeLang": "js",
   "selfDestructIn": 5,
   "formatBlock": "```",
   "autoPost": false,
